# cordell

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/main/: CLAUDE.md  agent.yaml
agents/monitor/: CLAUDE.md  agent.yaml
identity/versions/: v1.0.0.txt  v1.1.0.txt
src/: __init__.py  app.py  config.py  cordell_tools.py  history.py  logging_utils.py  notifications.py  protocols.py  scheduler.py  session_manager.py
tests/: __init__.py  test_config.py  test_cordell_tools.py  test_history.py  test_logging_utils.py  test_notifications.py  test_scheduler.py
