[project]
name = "cordell"
version = "0.1.0"
description = "Persistent, session-aware personal AI assistant built on the Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "claude-agent-sdk>=0.1.33",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
